# OpenIris-ESPIDF

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  sdkconfig  sdkconfig.board.facefocusvr_eye  sdkconfig.board.facefocusvr_face  sdkconfig.board.project_babble  sdkconfig.board.xiao-esp32s3  sdkconfig.old
.claude/: settings.local.json
.github/workflows/: build-and-release.yml
boards/: sdkconfig.base_defaults
boards/esp32AIThinker/: esp32AIThinker
boards/esp32Cam/: esp32Cam
boards/esp32M5Stack/: esp32M5Stack
boards/facefocusvr/: eye_L  eye_R  face
boards/project_babble/: project_babble
boards/seed_studio/: xiao_esp32s3
boards/wrooms3/: wrooms3
boards/wrover/: wrover
bootloader_components/: boot_hooks.c
components/CameraManager/CameraManager/: CameraManager.cpp  CameraManager.hpp
components/CommandManager/: CMakeLists.txt
components/CommandManager/CommandManager/: CommandManager.cpp  CommandManager.hpp  CommandResult.cpp  CommandResult.hpp  CommandSchema.cpp  CommandSchema.hpp  DependencyRegistry.hpp
components/CommandManager/CommandManager/commands/: camera_commands.cpp  camera_commands.hpp  config_commands.cpp  config_commands.hpp  device_commands.cpp  device_commands.hpp  mdns_commands.cpp  mdns_commands.hpp  scan_commands.cpp  scan_commands.hpp  simple_commands.cpp  simple_commands.hpp  wifi_commands.cpp  wifi_commands.hpp
components/FanManager/: CMakeLists.txt
components/FanManager/FanManager/: FanManager.cpp  FanManager.hpp
components/Helpers/Helpers/: helpers.cpp  helpers.hpp  main_globals.cpp  main_globals.hpp
components/LEDManager/LEDManager/: LEDManager.cpp  LEDManager.hpp
components/LogManager/: CMakeLists.txt
components/LogManager/LogManager/: LogManager.cpp  LogManager.hpp
components/MDNSManager/MDNSManager/: MDNSManager.cpp  MDNSManager.hpp
components/Monitoring/: CMakeLists.txt
components/Monitoring/Monitoring/: AdcSampler.cpp  AdcSampler.hpp  AdcSampler_esp32.cpp  AdcSampler_esp32s2.cpp  AdcSampler_esp32s3.cpp  BatteryMonitor.cpp  BatteryMonitor.hpp  CurrentMonitor.cpp  CurrentMonitor.hpp  CurrentMonitor_esp32.cpp  CurrentMonitor_esp32s3.cpp  MonitoringManager.cpp  MonitoringManager.hpp  MonitoringManager_esp32.cpp  MonitoringManager_esp32s3.cpp
components/OpenIrisTasks/OpenIrisTasks/: OpenIrisTasks.cpp  OpenIrisTasks.hpp
components/Preferences/Preferences/: Preferences.cpp  Preferences.hpp
components/ProjectConfig/ProjectConfig/: Models.hpp  ProjectConfig.cpp  ProjectConfig.hpp
components/RestAPI/RestAPI/: RestAPI.cpp  RestAPI.hpp
components/SerialManager/: CMakeLists.txt
components/SerialManager/SerialManager/: SerialManager.cpp  SerialManager.hpp  SerialManager_esp32.cpp  SerialManager_esp32s3.cpp
components/StateManager/StateManager/: StateManager.cpp  StateManager.hpp
components/StreamServer/StreamServer/: StreamServer.cpp  StreamServer.hpp
components/UVCStream/: CMakeLists.txt
components/UVCStream/UVCStream/: UVCStream.cpp  UVCStream.hpp
components/WebSocketLogger/WebSocketLogger/: WebSocketLogger.cpp  WebSocketLogger.hpp
components/esp32-camera/sensors/: ov3660.c
components/openiris_logo/openiris_logo/: openiris_logo.hpp
components/usb_device_uvc/: usb_device_uvc.c
components/usb_device_uvc/include/: usb_device_uvc.h
components/usb_device_uvc/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  uvc_frame_config.h
components/wifiManager/wifiManager/: WiFiScanner.cpp  WiFiScanner.hpp  wifiManager.cpp  wifiManager.hpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  openiris_main.cpp
tests/: .env.example  conftest.py  test_basic_functionality.py  test_commands.py  utils.py
tools/: fan_calibration.py  openiris_device.py  openiris_setup.py  setup_openiris.py  switchBoardType.py
