[project]
name = "blink"
version = "0.2.0rc0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
]

[bumpver]
current_version = "0.2.0rc0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = true
tag = true
push = false

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"sdkconfig" = [
    'CONFIG_GENERAL_VERSION="{version}"',
]

[tool.pytest]
testpaths = [
    "tests"
]
